automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -371,11 +371,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "x = 4"
+    "x = 4\n",
+    "print(x)"
    ]
   },
   {
